# ine

./: .gitignore  README.md  educação-draft.ipynb  educação.ipynb  educação.qmd  gini_rendimento.py  indicadores_principais.csv  indicadores_principais.xlsx  indicadores_todos.csv  indicadores_todos.xlsx  ine_api_showcase.ipynb  pobreza_exc_social.ipynb  pyproject.toml
.github/workflows/: vars.yml
docs/: CNAME  _config.yml  feed.xml  index.markdown
docs/_analyses/: educação-draft.html  pes.html  transacoes_imobiliarias.html
docs/_includes/: header.html
docs/_ine_updates/: 2025-01-01.md  2025-01-03.md  2025-01-04.md  2025-01-13.md  2025-01-15.md  2025-01-17.md  2025-01-24.md  2025-01-28.md  2025-01-29.md  2025-02-14.md  2025-02-17.md  2025-02-18.md  2025-02-18.yaml  2025-02-20.md  2025-02-20.yaml  2025-02-21.md  2025-02-26.md  2025-02-27.md  2025-02-28.md  2025-03-03.md  2025-03-04.md  2025-03-06.md  2025-03-07.md  2025-03-08.md  2025-03-12.md  2025-03-20.md  2025-03-25.md  2025-03-27.md  2025-03-28.md  2025-03-29.md  2025-03-31.md  2025-04-01.md  2025-04-02.md  2025-04-03.md  2025-04-04.md  2025-04-14.md  2025-04-23.md  2025-04-25.md  2025-04-29.md  2025-04-30.md  (+68 more)
ine_api/: __init__.py  base.py  daily_run.py  get_metainfo.py
smi/: __init__.py  __main__.py  get_metainfo.py  xml_indicadores.py
src/: .pre-commit-config.yaml  INE-howto-PT.md  pyproject.toml
src/analyses/: educação-draft.ipynb  gini_rendimento.py  ine_api_showcase.ipynb  pes.qmd  pobreza_exc_social.ipynb  transacoes_imobiliarias.ipynb
src/ine_api/: README.md  base.py  daily_run.py
(+3 files in other folders)
