[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "INE"
version = "0.1.0"
description = "tbd"
readme = "README.md"
authors = [{ name = "Francisco Mesquita", email = "fmg@duck.com" }]
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.0",
    "seaborn>=0.13.2"
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

